[build-system]
requires = [
    "setuptools>=30.3.0",
    "setuptools_scm",
    "wheel",
]

[tool.setuptools_scm]
write_to = "tf_pwa/version.py"

[tool.black]
line-length = 79
target-version = [
    'py35',
    'py36',
    'py37',
    'py38',
]
include = '\.pyi?$'
exclude = '''
/(
    .*\.egg-info
  | .*build
  | \.eggs
  | \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | \.vscode
  | dist
)/
'''

[tool.isort]
profile = "black"
src_paths = [
    "benchmarks",
    "tf_pwa",
    "tutorials",
]
line_length = 79
